src/test/resources/testinput/cocos/invalid/invalidContextVariableNamesAreUnique.ocl
/* (c) https://github.com/MontiCore/monticore */

ocl invalidContextVariableNamesAreUnique {
  context Auction a, Auction a
  inv: true;
}